<resources>
    <string name="app_name">ChatChit</string>
    <string name="enter_username">Enter your username</string>
    <string name="hint_username">Username</string>
    <string name="txt_joint_chat">Join</string>
    <string name="public_chat_room">Public Chat Room</string>
    <string name="err_empty_msg">No message to send!</string>
    <string name="enter_room_name">Enter room\'s name</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="err_empty_name">Name can not be empty</string>
    <string name="new_room">NEW ROOM</string>
    <string name="newest_message">Newest message</string>
    <string name="refresh">Refresh room list</string>
    <string name="common_error">Something\'s wrong! Please try again later!</string>
    <string name="error_invalid_room_name_description">Room name can not be EMPTY or REPEATED!</string>
    <string name="common_positive_button">Got it</string>
    <string name="common_negative_button">Cancel</string>
    <string name="error_invalid_room">This room doesn\'t exist anymore!</string>
    <string name="created_room">Successfully created new room!</string>
    <string name="joined_lobby">Welcome %s!</string>
    <string name="left_room">You are now in lobby</string>
    <string name="empty_username_warning">Username can\'t be empty!</string>
    <string name="load_image_error">Failed to load image</string>
    <string name="message_status_sending">Sending…</string>
    <string name="image_other">image_other</string>
    <string name="message_status_failed">Failed to send!</string>
    <string name="user_joined">%s joined</string>
    <string name="user_left">%s left</string>
    <string name="room_name_title">Room\'s name</string>
    <string name="active_user_title">Active</string>
    <string name="add_room_button">add room button</string>
    <string name="chat_hint">Type message here</string>
    <string name="gallery_icon">gallery icon</string>
    <string name="send_message_icon">send message icon</string>
    <string name="warning_title">WARNING!</string>
</resources>